# hexchat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  hexchat-plugin.h
src/: c.rs  call.rs  chan.rs  get_info.rs  hook.rs  lib.rs  lists.rs  mask.rs  msg.rs  other.rs  prefs.rs  reply.rs  response.rs  safe_static.rs  server_event.rs  subplugin.rs
